syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "org.myddd.java.distributed.api";
option java_outer_classname = "DistributedIdApplicationProto";
package org.myddd.java.distributed.api;

service DistributedIdApplication {
  rpc distributedId(google.protobuf.Empty) returns (google.protobuf.Int64Value) {}

  rpc hostIp(google.protobuf.Empty) returns (google.protobuf.StringValue) {}
}